--- a/egghead/flux/package.json
+++ b/egghead/flux/package.json
@@ -9,10 +9,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "es6-promise": "^2.1.1",
     "gulp": "^3.8.11",
     "gulp-browserify": "^0.5.1",
     "gulp-concat": "^2.5.2",
     "gulp-livereload": "^3.8.0",
+    "lodash": "^3.7.0",
     "react": "^0.13.2",
     "reactify": "^1.1.0"
   }
